2011-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/about.c, src/build.c, tagmanager/tm_workspace.c:
   Remove unused variables (patch by Eugene Arshinov, thanks).
 * src/stash.c:
   Remove unused variables (suggested by Eugene Arshinov).
 * src/ui_utils.c, doc/geany.txt, doc/geany.html:
   Do not allow 'Save All' even if 'allow_always_save' is set
   (patch by Dimitar Zhekov, thanks).
 * data/filetypes.java:
   Add 'enum' to secondary keywords
   (closes #3305737, patch by Matthew Brush, thanks).


2011-05-12  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/encodings.c:
   Update the HTML content-type encoding detection regexp to accept some
   more valid inputs (closes #3300703).


2011-05-11  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/plugins.c:
   Improve the plugin manager dialog a little.
 * src/geanywraplabel.c, src/geanywraplabel.h, src/keybindings.c,
   src/plugins.c:
   Cleanup GeanyWrapLabel a bit.


2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>

 * plugins/splitwindow.c:
   Remove widget reparenting in Split Window plugin. This fixes plugin
   issues on Windows (patch by Matthew Brush, thanks - closes #2725342).
 * plugins/Makefile.am, plugins/makefile.win32, wscript:
   Enable SplitWindow build on Windows again (re-apply Enrico's patch).


2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * HACKING:
   Add note about patching Glade 2.12 to compile it with
   newer GTK versions.


2011-05-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/callbacks.c:
   Fix 'Toolbar Preferences' popup menu item (oops).


2011-05-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * doc/geany.txt, doc/geany.html:
   Update the documentation for project patterns and recent FIF dialog
   changes.


2011-05-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, doc/geany.txt, doc/geany.html:
   Allow translations for color scheme [theme_info] keys.