@@ -1,3 +1,9 @@
+2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/prefs.c:
+   Fix preferences help button when activated with the keyboard.
+
+
 2011-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/about.c, src/build.c, tagmanager/tm_workspace.c:
